Added Discription of movie

--- a/app.css
+++ b/app.css
@@ -11,3 +11,21 @@ button{
     width: 40%;
     left:30%;
 }
+a{
+    color: blue;
+    background-color:greenyellow;
+}
+
+#movies img,#movie img{
+    width:100%;
+}
+
+@media(min-width:960px){
+    #movies .col-md-3 .well{
+        height: 390px;
+    }
+
+    #movies .col-md-3 img{
+        height:240px;
+    }
+}
