--- a/app.css
+++ b/app.css
@@ -10,6 +10,8 @@ button{
     justify-content: center;
     width: 40%;
     left:30%;
+    border-radius: 0.5px 0.5px 0.5px 0.5px;
+ 
 }
 a{
     color: blue;
